# fuwa

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/fuwa/: Cargo.toml  fuwa.schema.json
src/fuwa-codegen/: Cargo.toml
src/fuwa-codegen/src/: build.rs  lib.rs  main.rs  prisma.rs
src/fuwa-codegen/tests/: postgres_codegen.rs  prisma_codegen.rs
src/fuwa-core/: Cargo.toml
src/fuwa-core/src/: bind.rs  error.rs  expr.rs  ident.rs  lib.rs  query.rs  raw.rs  render.rs  selectable.rs  table.rs
src/fuwa-core/tests/: implicit_bind.rs
src/fuwa-derive/: Cargo.toml
src/fuwa-derive/src/: lib.rs
src/fuwa-postgres/: Cargo.toml
src/fuwa-postgres/src/: copy.rs  lib.rs  pg_error.rs
src/fuwa-postgres/tests/: derive.rs  postgres.rs
src/fuwa-query-macro/: Cargo.toml
src/fuwa-query-macro/src/: lib.rs
src/fuwa/examples/: basic.rs
src/fuwa/src/: lib.rs
src/fuwa/tests/: api.rs
