[workspace]
members = [
    "src/fuwa",
    "src/fuwa-core",
    "src/fuwa-derive",
    "src/fuwa-postgres",
    "src/fuwa-codegen",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taracutie/fuwa"
rust-version = "1.80"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rust_decimal = { version = "1", default-features = false, features = ["db-tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
uuid = { version = "1", features = ["v4", "serde"] }
