[package]
name = "fuwa-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PostgreSQL schema code generator for fuwa"

[dependencies]
clap.workspace = true
fuwa-core = { version = "0.1.0", path = "../fuwa-core" }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
