[package]
name = "fuwa-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core typed SQL AST and PostgreSQL renderer for fuwa"

[dependencies]
chrono.workspace = true
postgres-types.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
