[package]
name = "fuwa-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tokio-postgres execution support for fuwa"

[dependencies]
chrono.workspace = true
fuwa-core = { version = "0.1.0", path = "../fuwa-core" }
rust_decimal.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
