[package]
name = "fuwa-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tokio-postgres execution support for fuwa"

[dependencies]
bb8 = "0.9"
bb8-postgres = "0.9"
bytes = "1"
chrono.workspace = true
deadpool-postgres = "0.14"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
fuwa-core = { version = "0.1.0", path = "../fuwa-core" }
postgres-types.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
tracing = { version = "0.1", optional = true }
uuid.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dev-dependencies]
fuwa-derive = { version = "0.1.0", path = "../fuwa-derive" }
tokio = { workspace = true, features = ["time"] }
