[package]
name = "fuwa-query-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compile-time-checked SQL query macro for fuwa"

[lib]
proc-macro = true

[dependencies]
fuwa-codegen = { version = "0.1.0", path = "../fuwa-codegen" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
