[package]
name = "fuwa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Public facade crate for the fuwa typed PostgreSQL DSL"

[dependencies]
chrono.workspace = true
fuwa-core = { version = "0.1.0", path = "../fuwa-core" }
fuwa-postgres = { version = "0.1.0", path = "../fuwa-postgres" }
rust_decimal.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
